# taskwarrior_web

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  task.py
Container/: create_fedora_image_part_1.sh  create_fedora_part2.sh  create_image_debian_slim.sh  create_image_fedora_part_2.sh  create_image_secure_part_1.sh  create_image_secure_part_2.sh  debian-backports.sources
containers/: create_container.sh
src/: app.py  task.py
src/static/: main.py
src/taskwarrior_web/: app.py  task.py
src/templates/: layout.html  tasks.html
taskwarrior_web/: app.py  task.py  utility_functions.py
taskwarrior_web/templates/: index.html  layout.html  tasks.html
taskwarrior_web/templates/partials/: add_task.html  task_table.html
templates/: due_today.html  login.html  tasks.html
templates/partials/: add_task.html  task_table.html
