[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name="taskwarrior_web"
version="2.0"
dependencies=[
    "flask>=3.1.3",
    "jinja-partials>=0.3.1",
    "flask_wtf>=1.2.2",
    "wtforms>=3.2.1",
    "flask-login>=0.6.3",
    "flask-moment>=1.0.6",
    "taskchampion-py>=2.0.2",
    "uuid>=1.30",
]
authors=[{name="Eric Mesa", email="ericsbinaryworld@gmail.com"}]
description="A web interface for taskwarrior"
readme="README.md"
keywords=["taskwarrior", "flask"]
[project.urls]
Repository="https://github.com/djotaku/taskwarrior_web"
