[build-system]
requires = ["uv_build >= 0.10.10, <0.11.0"]
build-backend = "uv_build"

[project]
name="taskwarrior_web"
version="2.0"
dependencies=[
    "flask>=3.1.3",
    "jinja-partials>=0.3.1",
    "flask_wtf>=1.2.2",
    "wtforms>=3.2.1",
    "flask-login>=0.6.3",
    "flask-moment>=1.0.6",
    "taskchampion-py>=2.0.2",
    "uuid>=1.30",
    "pytz>=2026.1.post1",
]
requires-python = "== 3.13.*"
authors=[{name="Eric Mesa", email="ericsbinaryworld@gmail.com"}]
description="A web interface for taskwarrior"
readme="README.md"
keywords=["taskwarrior", "flask"]
[project.urls]
Repository="https://github.com/djotaku/taskwarrior_web"

[dependency-groups]
dev = [
    "ty>=0.0.29",
]
